Fix footer position that is not position:fixed on mobile

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -131,3 +131,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+footer {
+  position: fixed !important;
+}
